Tue Aug 7 19:19:28 EDT 2007 J Phelps <godless@users.sf.net>
	* sound_driver_oss.cpp(finish): Throw an exception if
	close() returns -1. Also usleep() for 1/4 second to
	eliminate the "Device or resource busy" error that
	happens if the close() is immediately followed by an
	open().
	* sound_drive_manager.cpp: Added a try..catch around
	one of the calls to Sound_Driver::init(), but more
	uncaught calls remain.
Tue Aug 7 15:11:07 EDT 2007 J Phelps <godless@users.sf.net>
	* pattern.cpp (set_length): Added a new iterator J. This
	function had a habit of calling map::erase() on a map
	element pointed to by the iterator I. Following this,
	it would increment I. erase() invalidates I, but it has
	gone unnoticed because I++ was still able to access the
	deallocated memory. But, when this is done with
	_GLIBCXX_DEBUG defined, the program aborts().

	Now, the new iterator J becomes a copy of I, then I
	is incremented, and then J is erased. 

	Because I is incremented in the middle of the for-loop,
	the end condition had to be moved into the loop, as well.

	An additional test is placed above the loop to handle
	the case in which column[i].begin() == column[i].end(),
	which would cause I to be "past-the-end" prior to the
	incrementation.
	* pattern.cpp (process_retrieve_request): Cast the
	signed int p_column to size_t to prevent a warning.
	* pattern.cpp: Changed the indentation style.
	* editor_selection.cpp(mark_column_sixteen): Added
	call to normalize_selection() and set selection_begin_y,
	which was previously neglected.

	* mdi_main_window.cpp: Updated the APP_VERSION_ string
	to 0.9.15.1 and updated the release date.
	* version_history.text: Updated.
Tue Aug 7 04:34:46 EDT 2007 J Phelps <godless@users.sf.net>
	* pattern_edit__keys.cpp(event): Added keybinding for
	Alt+D (select block of 16).
	* editor_selection.cpp,editor.h: Added new function,
	mark_block_sixteen(), to support the new key command.

	Added new Editor::Pattern_Actions enum Pattern_MARK_BLOCK_SIXTEEN.