@@ -1,3 +1,6 @@
+Tue Aug 7 21:06:13 EDT 2007 J Phelps <godless@users.sf.net>
+	* sample_data_fixedpoint.h (fixedpoint_loop): Fixed
+	a divide-by-zero bug.
 Tue Aug 7 19:19:28 EDT 2007 J Phelps <godless@users.sf.net>
 	* sound_driver_oss.cpp(finish): Throw an exception if
 	close() returns -1. Also usleep() for 1/4 second to
